@@ -439,11 +439,28 @@ void CPasskeyEntry::OnHelp()
 }
 
 //-----------------------------------------------------------------------------
+
+void CPasskeyEntry::UpdateRO()
+{
+  if (!m_bForceReadOnly) { // if allowed, changed r-o state to reflect file's permission
+    bool fro;
+    if (pws_os::FileExists(LPCTSTR(m_filespec), fro) && fro) {
+      m_PKE_ReadOnly = TRUE;
+      GetDlgItem(IDC_READONLY)->EnableWindow(FALSE);
+    } else { // no file or write-enabled
+      m_PKE_ReadOnly = FALSE;
+      GetDlgItem(IDC_READONLY)->EnableWindow(TRUE);
+    }
+    UpdateData(FALSE);
+  } // !m_bForceReadOnly
+}
+
 void CPasskeyEntry::OnComboEditChange()
 {
   m_MRU_combo.m_edit.GetWindowText(m_filespec);
   m_ctlPasskey.EnableWindow(TRUE);
   m_ctlOK.EnableWindow(TRUE);
+  UpdateRO();
 }
 
 void CPasskeyEntry::OnComboSelChange()
@@ -463,6 +480,7 @@ void CPasskeyEntry::OnComboSelChange()
   m_ctlPasskey.EnableWindow(TRUE);
   m_ctlPasskey.SetFocus();
   m_ctlOK.EnableWindow(TRUE);
+  UpdateRO();
 }
 
 void CPasskeyEntry::OnOpenFileBrowser()
@@ -508,7 +526,8 @@ void CPasskeyEntry::OnOpenFileBrowser()
     if (m_ctlPasskey.IsWindowEnabled() == TRUE) {
       m_ctlPasskey.SetFocus();
     }
-  }
+    UpdateRO();
+  } // rc == IDOK
 }
 
 void CPasskeyEntry::SetHeight(const int num)
