@@ -10,6 +10,9 @@ releases may be found in the file ChangeLog.txt.
 
 Bugs fixed in 3.14.02
 =====================
+[2269930] Track write permission of file in opening dialog: If the
+user chooses a file with different permission than the original, then
+the r-o status is updated accordingly.
 [2142691] Better support for Japanese text.
 [2113261] No longer crashes when opening write-protected database.
 [2102624] Can now change a normal entry into an alias or an alias'
